# cpp-sdl-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
